--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jai S. Mankoo <jsmankoo@outlook.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-core":"^6.0.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
